# django-rest-template

./: .dockerignore  .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
core/: settings.py  urls.py
todo/: models.py  serializer.py  urls.py  views.py
todo/migrations/: 0001_initial.py
